correction de l'ecart du header en version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -468,6 +468,7 @@ footer {
 
     header nav{
         width: 100%;
+        min-width: 320px;
         margin: 0;
     }
     
@@ -604,7 +605,7 @@ footer {
     }
 
     .footer-section{
-        width: 100%;
+        width: auto;
         padding: 30px;
     }
 }
